--- a/src/core/Statiq.App/Statiq.App.csproj
+++ b/src/core/Statiq.App/Statiq.App.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <None Include="Statiq.App.props" Pack="true" PackagePath="build\$(TargetFramework)\"/>
+    <None Include="Statiq.App.props" Pack="true" PackagePath="buildTransitive\$(TargetFramework)\"/>
   </ItemGroup>
 
   <ItemGroup>
