--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -1,4 +1,6 @@
-<Project> 
+<Project>
+  <Import Project="../Directory.Build.props" Condition="Exists('../Directory.Build.props')" />
+
   <PropertyGroup>
     <Version>1.0.0-beta.49</Version>
     <InformationalVersion>$(Version)</InformationalVersion>
