--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -1,8 +1,7 @@
 <Project>
-  <Import Project="../Directory.Build.props" Condition="Exists('../Directory.Build.props')" />
-
   <PropertyGroup>
-    <Version>1.0.0-beta.54</Version>
+    <Version Condition="'$(StatiqFrameworkVersion)' == ''">1.0.0</Version>
+    <Version Condition="'$(StatiqFrameworkVersion)' != ''">$(StatiqFrameworkVersion)</Version>
     <InformationalVersion>$(Version)</InformationalVersion>
     <AssemblyVersion>$(Version.Split('-')[0])</AssemblyVersion>
     <FileVersion>$(Version.Split('-')[0])</FileVersion>
