--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,6 +17,7 @@ jobs:
       # https://github.com/NuGet/Home/issues/11548
       # https://twitter.com/xoofx/status/1488617114940452872?s=20&t=BKSN4j9rP6fOyg8l7aW0eg
       NUGET_CERT_REVOCATION_MODE: offline
+      Configuration: Release
     steps:
       - name: Get Source
         uses: actions/checkout@v2
