--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,6 +5,8 @@ on:
   push:
     branches:
       - main
+      - net80incremental
+
 jobs:
   build:
     name: Build
@@ -35,4 +37,4 @@ jobs:
         if: success() || failure()
         with:
           name: test-results-${{ matrix.os }}
-          path: '**/test-results.trx'
+          path: "**/test-results.trx"
