--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,7 +32,7 @@ jobs:
       - name: Build and Test
         run: dotnet test --logger "trx;LogFileName=test-results.trx"
       - name: Upload Test Results
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact@v3 # Stick with v3 until https://github.com/dorny/test-reporter/issues/343 is resolved
         if: success() || failure()
         with:
           name: test-results-${{ matrix.os }}
